--- a/large-overlay.css
+++ b/large-overlay.css
@@ -1,14 +1,17 @@
 #overlay {
-  width: 90%;
-  height: 90%;
-  padding: 0px 16px;
+  width: 90% !important;
+  height: 90% !important;
+  padding: 0px 16px !important;
   position: fixed;
   z-index: 10000;
-  top: 5%;
-  left: 5%;
+  top: 5% !important;
+  left: 5% !important;
   display: block;
-  background-image: none;
-  background: #dfdfdf;
-  border:  solid 1px #000;
-  
+  background-image: none !important;
+  background: #dfdfdf !important;
+  border:  solid 1px #000 !important;
+}
+
+#overlay.yellow {
+  background: #ff0;
 }
