--- a/large-overlay.css
+++ b/large-overlay.css
@@ -15,3 +15,7 @@
 #overlay.yellow {
   background: #ff0;
 }
+
+body#show.boards #content table#board td ul.task_list li div.task_pane .task_name {
+  font-size:13px; line-height:17px;
+}
